------------------------------------------------------
Version 1.9.15
------------------------------------------------------

- Fixed server crash on startup
- Added a logo for ModMenu

------------------------------------------------------
Version 1.9.14
------------------------------------------------------

- Updated to 1.14 Pre Release 2
- Updated to Fabric Loader 0.4.0
- Reworked plugin loading system to make use of new Fabric Loader features

------------------------------------------------------
Version 1.9.13
------------------------------------------------------

- Updated to 19w12b

Mojang *please* stop breaking buttons, thanks. This is the third snapshot in a row.

------------------------------------------------------
Version 1.9.12
------------------------------------------------------

- Updated to 19w12a
- Enabled the config button in Mod Menu

------------------------------------------------------
Version 1.9.11
------------------------------------------------------

- Updated to 19w11b

------------------------------------------------------
Version 1.9.10
------------------------------------------------------

- Updated to 19w09a

------------------------------------------------------
Version 1.9.9
------------------------------------------------------

- Updated to 19w06a
- Updated to Fabric API 0.2.0
- Added a localization string to the Nitwit since Mojang doesn't have one

------------------------------------------------------
Version 1.9.8
------------------------------------------------------

- Added an API feature that allows displaying an item on an entity tooltip
    - Useful for things like paintings, item frames, and minecarts (which are included by default)
- Fixed minecart tooltip being blank

------------------------------------------------------
Version 1.9.7
------------------------------------------------------

- Updated to 19w04a

------------------------------------------------------
Version 1.9.6