@@ -3,7 +3,7 @@ package_group=mcp.mobius.waila
 mod_version=1.9.15
 curse_id=253449
 
-mc_version=1.14 Pre-Release 2
-mappings_version=5
+mc_version=1.14 Pre-Release 3
+mappings_version=1
 loader_version=0.4.1+build.125
-api_version=0.2.7+build.122
+api_version=0.2.7+build.123
