@@ -42,7 +42,7 @@ public class OverlayRenderer {
         if ((mc.currentScreen != null && !(mc.currentScreen instanceof ChatScreen)) || mc.world == null)
             return;
 
-        boolean isOnServer = !mc.isInSingleplayer() || mc.player.networkHandler.getScoreboardEntries().size() > 1;
+        boolean isOnServer = !mc.isInSingleplayer() || mc.player.networkHandler.getPlayerList().size() > 1;
         if (Waila.CONFIG.get().getGeneral().shouldHideFromPlayerList() && mc.options.keyPlayerList.isPressed() && isOnServer)
             return;
 
